<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>radiation_msgs</name>
  <version>1.0.0</version>
  <description>
    This package provides radiation message structures to convey
    data from ionising radiation detectors to other systems.
  </description>
  <maintainer email="andrew.west@manchester.ac.uk">Andy West</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/EEEManchester/radiation_msgs</url>

  <author email="andrew.west@manchester.ac.uk">Andy West</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
